Update VirtualThreads.java